<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <VideoView
        android:id="@+id/backgroundVid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        android:background="@drawable/black_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077">

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_black"
            android:text="@string/title_tag"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:fontFamily="@font/poppins_black"
            app:drawableEndCompat="@drawable/send"
            android:background="@drawable/auburn_round"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/userOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_squared"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/appGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:fontFamily="@font/poppins_medium"
            android:background="@drawable/black_round"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <Button
            android:id="@+id/newUserBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/newU"
            android:textSize="15sp"
            app:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue_yonder"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15sp" />

        <Button
            android:id="@+id/returnUserBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/oldU"
            android:textSize="15sp"
            app:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue_yonder"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>